--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>recipe-manager</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="flex w-screen h-screen font-sans bg-slate-900 text-slate-400">
-<!--Sidebar-->
 <div class="flex-shrink-0 p-5 w-64 border-r border-slate-700">
     <div class="mb-4">
-        <a href="/"><img src="/static/svg/logo.svg" alt="logo"></a>
+        <a href="/"><img src="/svg/logo.svg" alt="logo"></a>
     </div>
     <div class="font-bold text-sm">
         <a class="flex items-center p-2 rounded-md hover:bg-slate-800 hover:text-white" href="/">
-            <img class="mr-2" src="/static/svg/recipes.svg" alt="recipes">
+            <img class="mr-2" src="/svg/recipes.svg" alt="recipes">
             Recipes
         </a>
     </div>
 </div>
-
 <div class="flex flex-col grow">
-    <!--Header-->
     <div class="flex items-center p-4 h-16 border-b border-slate-700">
         <form class="flex items-center grow mr-2 p-2 space-x-2" action="">
-            <img src="/static/svg/search.svg" alt="search">
+            <img src="/svg/search.svg" alt="search">
             <label class="grow">
                 <input class="w-full bg-slate-900 text-sm focus:outline-none" type="search" name=""
                        id=""
@@ -31,30 +28,25 @@
             </label>
         </form>
         <a class="flex items-center p-2 bg-sky-500 rounded-md text-sm text-white hover:bg-sky-400" href="/">
-            <img class="mr-2" src="/static/svg/new.svg" alt="new">
+            <img class="mr-2" src="/svg/new.svg" alt="new">
             New
         </a>
     </div>
-    <!--Workspace-->
     <div class="grow overflow-y-auto m-5 p-5 space-y-5 border border-slate-700 rounded-xl">
         <div class="border border-slate-700 rounded-md">
             <div class="flex items-center p-5 border-b border-slate-700">
-                <p class="grow font-bold">Classic Spaghetti Carbonara</p>
+                <p class="grow font-bold"></p>
                 <a class="flex items-center mr-5 p-2 bg-sky-500 rounded-md text-sm text-white hover:bg-sky-400"
                    href="/">
-                    <img class="mr-2" src="/static/svg/edit.svg" alt="edit">
+                    <img class="mr-2" src="/svg/edit.svg" alt="edit">
                     Edit
                 </a>
                 <a class="flex items-center p-2 bg-sky-500 rounded-md text-sm text-white hover:bg-sky-400" href="/">
-                    <img class="mr-2" src="/static/svg/delete.svg" alt="delete">
+                    <img class="mr-2" src="/svg/delete.svg" alt="delete">
                     Delete
                 </a>
             </div>
-            <p class="p-5">Indulge in the creamy, savory delight of Classic Spaghetti Carbonara. This traditional
-                Italian dish
-                combines al dente spaghetti with crispy pancetta, rich egg yolks, and a generous amount of Parmesan
-                cheese. The result is a velvety, flavorful sauce that coats each strand of pasta perfectly. A sprinkle
-                of freshly ground black pepper adds the finishing touch to this simple yet decadent meal.</p>
+            <p class="p-5"></p>
         </div>
     </div>
 </div>
